--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -131,13 +132,14 @@
                     android:gravity="center" android:padding="8dp"
                     android:background="#3CF1EBF1">
                     <ImageView android:layout_width="25dp" android:layout_height="25dp"
-                        android:src="@drawable/info" android:tint="#FFFFFF"/>
+                        android:src="@drawable/info"
+                        app:tint="#FFFFFF" />
                     <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                         android:textSize="12dp" android:text="Created By"/>
                     <TextView android:id="@+id/about" android:layout_width="wrap_content"
                         android:layout_height="wrap_content" android:textSize="14dp"
-                        android:text="Evan"/>
+                        android:text="KELVIN"/>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
