--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,19 @@
     android:padding="25dp"
     android:background="@drawable/gradient_bg">
 
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefresh"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ListView
+            android:id="@+id/listView6"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </ListView>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
     <RelativeLayout
         android:id="@+id/mainContainer"
         android:layout_width="match_parent"
@@ -26,6 +39,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="24sp"
+                android:textColor="#fff"
                 android:text="AHMEDABAD, IN"/>
 
             <TextView
@@ -33,6 +47,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
+                android:textColor="#fff"
                 android:text="20 April 2021, 20:00 PM"/>
         </LinearLayout>
 
@@ -48,6 +63,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
+                android:textColor="#fff"
                 android:layout_gravity="center"
                 android:text="Clear Sky"/>
 
@@ -56,6 +72,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="90sp"
+                android:textColor="#fff"
                 android:fontFamily="sans-serif-thin"
                 android:layout_gravity="center"
                 android:text="29°C"/>
@@ -70,6 +87,7 @@
                     android:id="@+id/temp_min"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="#fff"
                     android:text="Min Temp: 05:05 AM"/>
 
                 <Space
@@ -80,6 +98,7 @@
                     android:id="@+id/temp_max"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="#fff"
                     android:text="Max Temp: 05:05 PM"/>
             </LinearLayout>
         </LinearLayout>
